# logos-package-downloader

./: .gitignore  CMakeLists.txt  README.md  flake.nix  result-cli
.github/workflows/: ci.yml  doctests.yml  release.yml
assets/: lgpd.desktop
assets/macos/: Info.plist.in
cmd/: CMakeLists.txt  main.cpp  version_info.h
docs/: project.md  spec.md
doctests/: lgpd-cli.test.yaml  run.sh
doctests/outputs/: lgpd-cli.md
nix/: build-info.nix  cli.nix  default.nix  lib.nix  tests.nix
pr-11/: index.html
pr-11/macos-latest/: index.html
pr-11/ubuntu-latest/: index.html
src/: lgpd.cpp  lgpd.h  package_downloader_lib.cpp  package_downloader_lib.h
tests/: CMakeLists.txt  test_downloader.cpp
